k8s/spring-active.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-active
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-healthcheck-path: /actuator/health
spec:
  selector:
    app: spring-app
  ports:
    - port: 80
      targetPort: 8080
  type: LoadBalancer
