k8s/spring-preview.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-preview
spec:
  selector:
    app: spring-app
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
